# reality

./: .gitignore  DESIGN.md  README.md  Reality.hs  default.nix  flake.nix  human.md  lakefile.toml  reality.cabal  reality.lean  reality.nix  reality_tests.lean
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2a9ylipb88x2sp2xn6cg58p5xm6qamai-source  3x4zpfp36k77d1lg052wxz4rvkxiq785-source  hz9wgm1chlnk6yj9i3gsqrx8k361j5h5-source
.github/workflows/: build.yml  proof.yml
case-studies/: case-study-extraction.hs
lang/: reality.agda  reality.c  reality.cpp  reality.elm  reality.hs  reality.idr  reality.nix  reality.purs  reality.py
laws/: causality.md  correspondence.md  polarity.md  reflection.md  rhythm.md  truth.md  unity.md
tests/: Test.hs
tests/babylon/: extraction.nix
tests/lean/: reality.lean  reality_tests.lean
