cabal-version: 3.0
name:          reality
version:       1.0.0
synopsis:      The Seven Laws of Reality
author:        Arthur Douglas Noel, Djina Jones
license:       LicenseRef-DICKSLAW
license-file:  LICENSE.md
build-type:    Simple

library
  exposed-modules:  Reality
  build-depends:    base >= 4.14 && < 5
  hs-source-dirs:   .
  default-language: Haskell2010

test-suite reality-test
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  hs-source-dirs:   tests
  build-depends:    base >= 4.14 && < 5
                  , reality
  default-language: Haskell2010
